# BatteryShipping

./: pyproject.toml  requirements.txt
src/battery_pickup_service/: app.py  declarations.json  package_data.py  simulation.json
tests/: test_battery_pickup_service.py
